Fixed modal window opening too low.

--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -623,7 +623,7 @@ body.modal-open,
   outline: none;
   position: absolute;
   margin-top: 0;
-  top: 50%;
+  top: 20%;
   overflow: visible; /* allow content to popup out (i.e tooltips) */
 }
 
